2004-12-04  Martin Baulig  <martin@ximian.com>

	* loader.c (mono_method_get_signature_full): New public function;
	like mono_method_get_signature(), but with an additional
	`MonoGenericContext *' argument.

	* class.c (mono_class_inflate_generic_signature): Formerly known
	as inflate_generic_signature(); make this public.

2004-12-04  Martin Baulig  <martin@ximian.com>

	* metadata.c
	(mono_metadata_parse_type_full): Take a `MonoGenericContext *'
	instead of a `MonoGenericContainer *'.	
	(mono_metadata_parse_array_full): Likewise.
	(mono_metadata_parse_signature_full): Likewise.
	(mono_metadata_parse_method_signature_full): Likewise.
	(mono_metadata_parse_generic_inst): Likewise.
	(mono_metadata_parse_generic_param): Likewise.
	(mono_metadata_parse_mh_full): Likewise.
	(mono_type_create_from_typespec_full): Likewise.

2004-12-03  Martin Baulig  <martin@ximian.com>

	* class-internals.h (MonoGenericContainer): Replaced the
	`MonoGenericContext * pointer with a `MonoGenericContext'
	structure and made it the first element.

2004-12-03  Martin Baulig  <martin@ximian.com>

	* class.c
	(inflate_generic_type): Set the `context->container' when creating
	a new MonoGenericContext.
	(mono_class_inflate_generic_method): Likewise.
	(mono_class_create_from_typespec): Just use `context->container'
	to get the container.

	* loader.c (method_from_methodspec): Set `context->parent' from
	`context->container' - and if that's a method container, use its
	parent.  Also set the `context->container' when creating a new
	MonoGenericContext.
	(mono_get_method_from_token): Use just `context->container' to get
	the container.

	* metadata.c (do_mono_metadata_parse_generic_class): Also set
	`gclass->context->container'.

	* reflection.c (do_mono_reflection_bind_generic_parameters): Set
	the `context->container' when creating a new MonoGenericContext.

2004-12-03  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c (compare_genericparam): Sort params with identical