@@ -37,6 +37,7 @@ typedef enum {
 	MONO_WRAPPER_CASTCLASS,
 	MONO_WRAPPER_PROXY_ISINST,
 	MONO_WRAPPER_STELEMREF,
+	MONO_WRAPPER_UNBOX,
 	MONO_WRAPPER_UNKNOWN
 } MonoWrapperType;
 
